--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="%PUBLIC_URL%/fonts/inter/inter.css">
 
-    <title>SteamLibraryCompare</title>
+    <title>%REACT_APP_NAME%</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
